-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17, 21, 25
-
Component/s: hotspot
-
b26
-
riscv
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8360377 | 21.0.9 | Feilong Jiang | P4 | Resolved | Fixed | b01 |
| JDK-8360786 | 17.0.17 | Feilong Jiang | P4 | Resolved | Fixed | b01 |
- backported by
-
JDK-8360377 RISC-V: Interpreter volatile reference stores with G1 are not sequentially consistent
-
- Resolved
-
-
JDK-8360786 RISC-V: Interpreter volatile reference stores with G1 are not sequentially consistent
-
- Resolved
-
- relates to
-
JDK-8351997 AArch64: Interpreter volatile reference stores with G1 are not sequentially consistent
-
- Closed
-
- links to
-
Commit(master)
openjdk/jdk17u-dev/76e13298
-
Commit(master)
openjdk/jdk21u-dev/f2614cca
-
Commit(master)
openjdk/jdk/c5a1543e
-
Review(master)
openjdk/jdk17u-dev/3678
-
Review(master)
openjdk/jdk21u-dev/1910
-
Review(master)
openjdk/jdk/25502