8357968: RISC-V: Interpreter volatile reference stores with G1 are not sequentially consistent

Reviewed-by: rehn, fyang
Backport-of: c5a1543ee3e68775f09ca29fb07efd9aebfdb33e